Partial update to authentication components

--- a/src/pages/maps/ingestion/main.module.sass
+++ b/src/pages/maps/ingestion/main.module.sass
@@ -7,9 +7,10 @@
   font-size: 0.8em
 
 .ingestion-title-bar
-  display: grid
-  grid-template-columns: 1000px
-  justify-content: center
+  display: flex
+  justify-content: space-between
+  flex-direction: row
+  align-items: baseline
 
 .ingestion-body
   display: grid
