Update styles and auth
- Can now login, logout and view user with the provided auth components
- Tweak the ingest card styles so they don't spill over content border

--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -10,6 +10,9 @@
   margin: 2em auto 3em
   max-width: 78em
   padding: 0 4em
+  @media only screen and (max-width: 900px)
+    padding: 0 1em
+
 
   .centered
     min-height: 100vh
