--- a/src/pages/maps/ingestion/main.module.sass
+++ b/src/pages/maps/ingestion/main.module.sass
@@ -14,13 +14,14 @@
 
 .ingestion-body
   display: grid
-  //grid-template-columns: 800px 200px
+  grid-template-columns: repeat(2, minmax(0, 1fr))
+  column-gap: .5rem
+  row-gap: .5rem
   justify-content: center
 
 .ingestion-cards, .ingestion-context
   display: grid
   column-gap: 1em
   row-gap: 1em
-  grid-template-columns: 1fr 1fr
   justify-content: repeat(auto-fill)
 
