Updated ingestion pages slightly

--- a/src/pages/maps/ingestion/@id/edit-page.module.sass
+++ b/src/pages/maps/ingestion/@id/edit-page.module.sass
@@ -12,9 +12,14 @@
 .spacer
   flex-grow: 1
 
-.map-panel-container, .edit-page-content
+.edit-page-content
+  flex-grow: 3
+  max-width: 100%
+
+.map-panel-container
   flex: 1
   min-width: 0
+  
 
 .edit-menu
   flex-grow: 1
