--- a/src/pages/maps/ingestion/@id/main.module.sass
+++ b/src/pages/maps/ingestion/@id/main.module.sass
@@ -48,3 +48,11 @@ body
 
 .edit-page-header
   padding-bottom: 1rem
+
+.map-interface.no-map
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  height: 100vh
+  flex: 1
