Pretty decent metadata table

--- a/src/pages/maps/ingestion/@id/components/main.module.sass
+++ b/src/pages/maps/ingestion/@id/components/main.module.sass
@@ -22,3 +22,14 @@
   background-color: #efefef
   &:hover
     background-color: #ddd
+
+.edit-page-header
+  display: flex
+  flex-direction: row
+  gap: 1em
+  align-items: baseline
+  h2
+    flex-grow: 1
+    min-width: 20%
+  h3
+    font-weight: 500
