--- a/src/pages/maps/ingestion/@id/edit-page.module.sass
+++ b/src/pages/maps/ingestion/@id/edit-page.module.sass
@@ -1,8 +1,8 @@
 .edit-page
   display: flex
   flex-direction: row
-  height: 100vh
-  width: 100vw
+  max-height: 100%
+  max-width: 100% 
   overflow: hidden
 
 
