All pages work minus some styling

--- a/src/pages/maps/ingestion/@id/main.module.sass
+++ b/src/pages/maps/ingestion/@id/main.module.sass
@@ -49,6 +49,9 @@ body
 .edit-page-header
   padding-bottom: 1rem
 
+.map-interface
+  height: 100%
+
 .map-interface.no-map
   display: flex
   flex-direction: column
