--- a/src/pages/maps/ingestion/@id/components/main.module.sass
+++ b/src/pages/maps/ingestion/@id/components/main.module.sass
@@ -1,6 +1,7 @@
 .width-adjustable-panel
   transition: max-width 0.1s ease-in-out
   height: 100%
+  width: 100%
   display: flex
   flex-direction: row
   position: relative
@@ -12,6 +13,7 @@
   height: 100%
   flex-grow: 1
   padding: 1em
+  width: 100%
 
 .width-adjuster
   cursor: col-resize
