--- a/src/pages/maps/ingestion/@id/@editMode/main.module.sass
+++ b/src/pages/maps/ingestion/@id/@editMode/main.module.sass
@@ -1,8 +1,8 @@
 .edit-page
   display: flex
   flex-direction: row
-  max-height: 100%
-  max-width: 100% 
+  width: 100%
+  height: 100%
   overflow: hidden
 
 
@@ -18,8 +18,7 @@
   min-width: 0
   
 
-.edit-menu
-  flex-grow: 1
+
   
 div.interface
   height: 100%
@@ -27,18 +26,7 @@ div.interface
   border-radius: 10px
   margin-right: auto
 
-button.icon-button
-  aspect-ratio: 1 / 1
-  margin: 5px
-  display: flex
-  flex-direction: column
-  border-radius: 10px
-  .icon-container
-    display: flex
-    margin: auto
-    padding: 6px
-  .icon-label
-    padding-bottom: 10px
+
 
 
 
