--- a/src/pages/maps/ingestion/@id/main.module.sass
+++ b/src/pages/maps/ingestion/@id/main.module.sass
@@ -59,3 +59,18 @@ body
   justify-content: center
   height: 100vh
   flex: 1
+
+.edit-menu
+  flex-grow: 1
+  button.icon-button
+    aspect-ratio: 1 / 1
+    margin: 5px
+    display: flex
+    flex-direction: column
+    border-radius: 10px
+    .icon-container
+      display: flex
+      margin: auto
+      padding: 6px
+    .icon-label
+      padding-bottom: 10px
