--- a/src/pages/maps/ingestion/@id/components/main.module.sass
+++ b/src/pages/maps/ingestion/@id/components/main.module.sass
@@ -34,3 +34,14 @@
     min-width: 20%
   h3
     font-weight: 500
+
+.map-interface
+  height: 100%
+
+.map-interface.no-map
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  height: 100vh
+  flex: 1
