Add missing client side coercion

--- a/src/pages/dev/filtering/main.module.styl
+++ b/src/pages/dev/filtering/main.module.styl
@@ -61,3 +61,14 @@
 
 .dev-index-page
   overflow-y: scroll
+
+.lithology-item
+  padding: .2em .4em
+
+.lithology-title
+  font-weight: bold
+  margin-bottom: 0.5em
+
+.lithology-description
+  font-size: 0.8em
+  font-width: 300
