Add lith editing interface

--- a/src/pages/dev/filtering/main.module.styl
+++ b/src/pages/dev/filtering/main.module.styl
@@ -64,6 +64,9 @@
 
 .lithology-item
   padding: .2em .4em
+  border-radius: .5em
+  border: #ebebeb solid 3px
+  margin-bottom: .2em
 
 .lithology-title
   font-weight: bold
