--- a/src/pages/test/main.styl
+++ b/src/pages/test/main.styl
@@ -1,6 +1,6 @@
 html, body
   color: #E0E1E6
-  height: 100%
+  background-color: white
 
 .nav
   ul 
@@ -30,13 +30,13 @@ html, body
   padding-top: 6px
 
 .parent
-  height: 100%
+  height: 100vh
 
 .left
   width: 70%
   text-align: center
-  height: 750px
-  background-image url("./img/cover_medium.jpg")
+  height: 100vh
+  background-image url("./img/cover_large.jpg")
   color: white
 
   li
@@ -46,16 +46,15 @@ html, body
   ul
     display: inline-block;
 
-
-
 .right
   background-color: blue
-  height: 750px
+  height: 100vh
   width: 30%
   background-image url("./img/deep_sea_new_medium.jpg")
 
   ul 
     list-style-type: none
+    margin-top: 32vh
 
   li 
     width: 25%
@@ -71,8 +70,7 @@ html, body
 .big
   font-size: 72px
   font-family: "Maven Pro", sans-serif;
-  margin-top: 10%
-  margin-bottom: 5%
+  margin-top: 32vh
   width: 40%
   margin-left: 30%
   text-align: center
@@ -142,10 +140,11 @@ html, body
   padding-top: 5px
 
 .country_container 
-  height: 1000px
+  height: 100vh
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 2fr));
   grid-template-rows: repeat(2, minmax(150px, 2fr));
+  background-color: green
 
 .country
   height: 100%
@@ -166,3 +165,48 @@ html, body
 
 .new-zealand
   background-image url("./img/new_zealand_new.jpg")
+
+.rock-border
+  content: url("./img/rocks-border.jpg")
+  width: 100%
+  margin: 0
+
+.geologic-maps
+  height: 100vh
+  background-color: white
+  color: black
+  margin: 0
+
+.map-info
+  padding: 0 10vh
+  margin: 0
+
+.title
+  margin: 0
+  font-size: 72px
+  font-family: "Maven Pro", sans-serif;
+  padding: 20vh 0
+  text-align: center
+
+#about
+  height: 100vh
+  background-color: white
+  color: black
+  margin: 0
+
+#apps
+  height: 100vh
+  color: black
+  background-color: white
+
+#api
+  height: 100vh
+
+.donate-container
+  height: 80vh
+  background-image url("./img/donate_medium.jpg")
+
+.donate-title
+  color:white
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+  font-family: "Maven Pro", sans-serif;
