Correlation chart is starting to get a bit nicer

--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -4,6 +4,7 @@ div.correlation-chart
 .bar
   position: absolute
 
+// Ideally this wouldn't be necessary
 .page-inner
   position: absolute
   top: 0
@@ -16,4 +17,6 @@ div.correlation-chart
 
 
 .vis-container
-  flex-grow: 1
+  flex: 1
+  overflow: hidden
+  
