Added prototype selection box for popover

--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -20,3 +20,9 @@ div.correlation-chart
   flex: 1
   overflow: hidden
   
+.popover-container
+  pointer-events: none
+  position: relative
+
+.popover-main
+  position: absolute
