Popover mostly displays in the right place

--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -26,3 +26,10 @@ div.correlation-chart
 
 .popover-main
   position: absolute
+  outline: 2px solid #f22
+
+  :global(.bp5-popover-target)
+    height: 100%
+    width: 100%
+    display: block
+    line-height: 0
