--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -7,17 +7,16 @@ div.correlation-chart
 // Ideally this wouldn't be necessary
 .page-inner
   position: relative
-  width: 100%
-  height: 100%
   margin: 2em auto 3em
   display: flex
   flex-direction: column
+  height: 100%
 
 
 .vis-container
   flex: 1
   overflow: hidden
-  
+
 .popover-container
   pointer-events: none
   position: relative
@@ -60,7 +59,7 @@ div.correlation-chart
     gap: 1em
     justify-content: space-between
     .value
-      text-align-last: right
+      text-align: right
   .label
     font-size: 0.8em
     font-weight: bold
@@ -68,4 +67,3 @@ div.correlation-chart
     color: var(--secondary-color)
   .value
     display: block
-
