Added link to correlation chart

--- a/src/pages/maps/@id/main.module.sass
+++ b/src/pages/maps/@id/main.module.sass
@@ -32,3 +32,10 @@ body
   height: 1em
   display: inline-block
   margin-right: 0.5em
+
+.dev-links
+  display: block
+  text-align: right
+  &>*
+    display: block
+    margin: 1em
