--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -65,6 +65,9 @@ div.correlation-chart
     font-weight: bold
     display: block
     color: var(--secondary-color)
-  .value
+  .value-container
     display: block
     font-size: 0.9em
+  .unit
+    color: var(--secondary-color)
+    
