--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -58,7 +58,7 @@ div.correlation-chart
     align-items: baseline
     gap: 1em
     justify-content: space-between
-    .value
+    .data-container
       text-align: right
   .label
     font-size: 0.9em
@@ -66,8 +66,9 @@ div.correlation-chart
     display: block
     color: var(--secondary-color)
   .value-container
-    display: block
     font-size: 0.9em
+    display: inline-block
+    break-inside: avoid
   .unit
     color: var(--secondary-color)
     
