Added settings panel

--- a/src/pages/maps/@id/correlation/main.module.sass
+++ b/src/pages/maps/@id/correlation/main.module.sass
@@ -72,3 +72,7 @@ div.correlation-chart
   .unit
     color: var(--secondary-color)
     
+.settings
+  padding: 1em
+  >h3:first-child
+    margin-top: 0
