--- a/src/pages/dev/people/main.styl
+++ b/src/pages/dev/people/main.styl
@@ -31,6 +31,8 @@ a:hover
 .big
     color: white
     text-align: center
+    font-size: 75px
+    font-family: "Maven Pro", sans-serif
 
 .people
     color: white
@@ -83,3 +85,36 @@ t
 e 
     font-size: 14px
     font-weight: 200px
+
+.footer 
+  width: 100%
+  background-color: #015EAB
+  margin-top: 250vh
+
+.footer-container
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 60%
+
+.col-sm-4
+  color: white
+  width: 33.333%
+  color: #E0E1E6;
+  font-weight: 200;
+  text-align: center;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-weight: bold
+
+.nav-logo
+  padding-top: 5px
+
+.funding-logo
+  padding: 10px
+
+.footer-nav
+  list-style-type: none
+  padding-right: 40px
