added built with macrostrat section

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -318,3 +318,33 @@ a:hover
 
 #who-made-it
   padding-top: 25px
+
+.app-header
+  margin: 0
+  padding: 0
+
+.app-box 
+  height: 15vh
+  display: flex
+  width: 60%
+  margin: 0 20%
+  position: relative
+  color: black
+
+.app-background-text
+  margin: auto
+  padding-right: 20px
+  margin-right: 0
+  text-align: right
+  max-width: 55%
+  font-size: 72px
+
+.blurb
+  font-size: 15px
+
+
+.app-img
+  height: 80%
+  margin: auto
+  margin-left: 6%
+  
