--- a/src/pages/dev/apps/main.styl
+++ b/src/pages/dev/apps/main.styl
@@ -3,7 +3,7 @@
     background-color: white
 
 #apps
-    padding: 75px 0
+    padding: 75px 0    
 
 
 .nav
@@ -50,7 +50,7 @@
   font-size: 72px
 
 .blurb
-  font-size: 15px
+    font-size: 15px
 
 .app-img
   height: 80%
@@ -61,6 +61,9 @@
   font-size: 72px
   font-family: "Maven Pro", sans-serif
   text-align: center  
+  background-color: rgba(0,0,0,.2)
+  width: 60%
+  margin: 0 20%
 
 .footer 
   width: 100%
