--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -347,4 +347,19 @@ a:hover
   height: 80%
   margin: auto
   margin-left: 6%
+
+#api 
+  background-color: white
+  color: black
   
+.api-header
+  padding: 0
+  margin: 0
+
+.row
+  height: 15vh
+  display: flex
+  width: 60%
+  margin: 0 20%
+  position: relative
+  color: black
