added api section

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -3,6 +3,9 @@ html, body
   background-color: white
   margin: 0
 
+#total
+  background-color: white
+
 a
   color: white
 
@@ -348,10 +351,39 @@ a:hover
   margin: auto
   margin-left: 6%
 
-#api 
+
+#api  
+  position: relative
+  height: 30vh
   background-color: white
-  color: black
-  
-.api-header
-  padding: 0
-  margin: 0
+
+#api-circle-text
+  display: table-cell;
+  vertical-align: middle;
+  color: #6bbe98;
+  font-size: 72px
+  font-weight: 500
+
+.api-circle
+  float: left
+  margin-left: 15%
+  margin-right: 50px
+  background-color: #fff;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  text-align: center;
+  display: table;
+  border: 11px solid #6bbe98;
+  color: #4BABBf;
+
+#api-text
+  padding-top: 50px
+  margin-right: 15%
+  color: #4bab7f;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+
+
+
