added about section

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -404,3 +404,31 @@ a:hover
     color: #babdc8;
     content: counter(pub-counter) " "
     counter-increment: pub-counter
+
+#about  
+  margin: 0 10%
+
+.about-row
+  margin: 4%
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 200;
+
+.about-body-subtitle
+  float: left
+  font-size: 22px;
+  font-weight: 200;
+
+.about-body
+  margin-left: 30%
+
+#about-title
+  text-align: left
+  color: #E0E1E6
+  position: relative
+  padding-bottom: 0
+
+.line
+  width: 100%;
+  border-bottom: 1px solid #E0E1E6;
+  position: absolute;
