added geological maps section

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -45,7 +45,8 @@ a:hover
   width: 70%
   display: flex;
   justify-content: center;
-  align-items: center;  height: 100vh
+  align-items: center;  
+  height: 99.6vh
   color: white
 
   li
@@ -432,3 +433,26 @@ a:hover
   width: 100%;
   border-bottom: 1px solid #E0E1E6;
   position: absolute;
+
+.geology-img
+  position:absolute
+  z-index: 0
+  height: 100vh
+  width: 100%
+  object-fit: cover
+
+.map-info
+  position:absolute
+  z-index: 1
+  color: white
+  font-size: 20px
+  margin: 40vh 10%
+  padding: 20px
+  background-color: rgba(0,0,0,.4)
+
+.map-title
+  position:absolute
+  z-index: 1
+  color: white
+  width: 50%
+  margin: 0 25%
