fixed header and nav

--- a/src/pages/dev/apps/main.styl
+++ b/src/pages/dev/apps/main.styl
@@ -3,8 +3,10 @@
     background-color: white
 
 #apps
-    padding: 75px 0    
+  padding: 75px 0    
 
+a:hover
+  text-decoration: none
 
 .nav
   position: fixed
@@ -32,6 +34,7 @@
 .app-header
   margin: 0
   padding: 0
+  border: solid grey
 
 .app-box 
   height: 15vh
@@ -61,9 +64,10 @@
   font-size: 72px
   font-family: "Maven Pro", sans-serif
   text-align: center  
-  background-color: rgba(0,0,0,.2)
+  background-color: #4BABBf
   width: 60%
   margin: 0 20%
+  color: white
 
 .footer 
   width: 100%
