more fixes to nav bar

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -46,7 +46,7 @@ a:hover
   display: flex;
   justify-content: center;
   align-items: center;  
-  height: 99.6vh
+  height: 95vh
   color: white
 
   li
@@ -391,8 +391,13 @@ a:hover
 
 #pub-title 
   text-align: left
+  color: #E0E1E6
+  position: relative
+  padding-bottom: 0
+  margin-bottom: 0
 
 .pub-list
+  padding-top: 10px
   margin-left: 20px
   counter-reset: pub-counter 70
   color: black
@@ -456,3 +461,8 @@ a:hover
   color: white
   width: 50%
   margin: 0 25%
+
+.pub-line
+  width: 80%;
+  border-bottom: 1px solid #E0E1E6;
+  position: absolute;
