changed header and spacer

--- a/src/pages/dev/people/main.styl
+++ b/src/pages/dev/people/main.styl
@@ -1,6 +1,6 @@
-.htnl, .body
-    background-color: black
-    color: white
+.htnl, .body, .main
+    background-color: white
+    color: black
 
 a:hover
     text-decoration: none
@@ -29,10 +29,19 @@ a:hover
     text-decoration: none
 
 .big
-    color: white
-    text-align: center
+    color: #E0E1E6
+    text-align: left
     font-size: 75px
     font-family: "Maven Pro", sans-serif
+    margin: 0
+    margin-left: 20%
+    margin-top: 30px
+
+.line
+  border-bottom: 3px solid #E0E1E6;
+  width: 60%
+  margin: 20px 20% 
+
 
 .people
     color: white
@@ -40,19 +49,18 @@ a:hover
 .left
     float: left
     width: 30%
-    background-color: green
     margin-left: 20%
 
 .right
     float: left
     width: 30%
-    background-color: red
     margin-right: 20%
 
 .person-info
     height: 30vh
-    width: 100%
+    width: 90%
     position: relative
+    margin: 5%
 
 .text
     text-align: right
@@ -90,7 +98,8 @@ e
 .footer 
   width: 100%
   background-color: #015EAB
-  margin-top: 250vh
+  margin-top: 280vh
+  padding: 25px 0
 
 .footer-container
   display: flex;
