--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -22,3 +22,22 @@
 
 .fullscreen-page
   padding: 1em 4em 3em
+
+.page-transition
+  position: fixed
+  width: 100vw
+  height: 100vh
+  top: 0
+  left: 0
+  transition: opacity 0.3s ease-in-out
+  background-color: var(--translucent-panel-background-color)
+  opacity: 0.5
+  z-index: 1000
+  .page-transition-content
+    // Center the content
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+  &.page-transition-leave
+    opacity: 0
