Started some basics for correlation page

--- a/src/pages/correlation/main.module.sass
+++ b/src/pages/correlation/main.module.sass
@@ -1,6 +1,11 @@
 .column-selection-map
-  max-width: 20em
-  height: 20em
+  height: 30em
   position: relative
   :global(.main-view)
     height: 100%
+
+.assistant
+  width: 30em
+
+.correlation-diagram
+  flex-grow: 1
