added about page

--- a/src/pages/dev/about/main.styl
+++ b/src/pages/dev/about/main.styl
@@ -60,7 +60,7 @@ a:hover
   margin: auto
   margin-left: 6%
 
-.big
+.big-apps
   font-size: 72px
   font-family: "Maven Pro", sans-serif
   text-align: center  
@@ -68,6 +68,12 @@ a:hover
   width: 60%
   margin: 0 20%
   color: white
+
+
+.big
+  font-size: 72px
+  font-family: "Maven Pro", sans-serif;
+  text-align: center
 
 .footer 
   width: 100%
@@ -119,3 +125,71 @@ a:hover
 
 #who-made-it
   padding-top: 25px
+
+#api  
+  position: relative
+  height: 30vh
+  background-color: white
+
+#api-circle-text
+  display: table-cell;
+  vertical-align: middle;
+  color: #6bbe98;
+  font-size: 72px
+  font-weight: 500
+
+.api-circle
+  float: left
+  margin-left: 15%
+  margin-right: 50px
+  background-color: #fff;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  text-align: center;
+  display: table;
+  border: 11px solid #6bbe98;
+  color: #4BABBf;
+
+#api-text
+  padding-top: 50px
+  margin-right: 15%
+  color: #4bab7f;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+
+
+#about  
+  padding: 75px 0
+  margin: 0 10%
+
+.about-row
+  margin: 4%
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 200;
+
+.about-body-subtitle
+  float: left
+  font-size: 22px;
+  font-weight: 200;
+
+.about-body
+  margin-left: 30%
+
+#about-title
+  text-align: left
+  color: #E0E1E6
+  position: relative
+  padding-bottom: 0
+
+.line
+  width: 100%;
+  border-bottom: 1px solid #E0E1E6;
+  position: absolute;
+
+.rock-border
+  width: 100%
+  margin: 0
+  padding: 0
