added version number

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -209,6 +209,17 @@ a:hover
   padding: 20vh 0
   text-align: center
 
+.header 
+  margin: 0 20%
+
+#main-title
+  display: inline-block
+
+.version
+  display: inline-block
+  margin-left: 20px
+  font-size: 40px
+
 #about
   height: 100vh
   background-color: white
