--- a/src/pages/map/map-interface/map-page/settings-panel.module.styl
+++ b/src/pages/map/map-interface/map-page/settings-panel.module.styl
@@ -16,10 +16,21 @@
   font-size: 0.9em
   line-height: 1em
 
+.dark-mode-controls
+  display: flex
+  gap: 0.5em
+  align-items: center
+  &>:first-child
+    flex-grow: 1
+
 .settings
   .auto-button
     font-size: 12px
     font-style: italic
+
+  &>*
+    width: 100%
+    margin: 0.1em 0 0.2em
 
   :global
     .bp5-control
@@ -34,8 +45,6 @@
       position: relative
 
     .bp5-button, .bp5-button-group
-      width: 100%
-      margin: 0.1em 0 0.2em
       justify-content: start
       align-items: center
       //box-shadow: 0 0 0px 1px var(--card-shadow-color)
@@ -52,6 +61,9 @@
 .callout-panel
   border-radius: 3px
   overflow: hidden
+  .callout-header
+    :global(.bp5-button)
+      width: 100%
   &.expanded
     .callout-header
       :global(.bp5-button)
@@ -78,3 +90,6 @@
   gap: 0.5em
   &>*
     flex: 1
+
+
+
