--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -163,10 +163,6 @@ a:hover
 
 .country_container 
   height: 100vh
-  display: grid;
-  grid-template-columns: repeat(2, minmax(150px, 2fr));
-  grid-template-rows: repeat(2, minmax(150px, 2fr));
-  background-color: green
 
 .country
   height: 100%
@@ -177,10 +173,7 @@ a:hover
   color: white
 
 .img
-  position:absolute
-  z-index:5
-  height: 100vh
-  width: 100%
+  width: 50%
   object-fit: cover
 
 .country-image
@@ -210,7 +203,8 @@ a:hover
   text-align: center
 
 .header 
-  margin: 0 20%
+  margin: 0 20%  
+  text-shadow: black 1px 0 10px;
 
 #main-title
   display: inline-block
@@ -476,3 +470,28 @@ a:hover
   width: 80%;
   border-bottom: 1px solid #E0E1E6;
   position: absolute;
+
+.location
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 40vh;
+
+.t1
+  margin-left: 10%
+
+.t2
+  margin-right: 10%
+
+.location-img
+  width: 300px
+  height: 250px
+  display: flex;
+  margin: auto
+  border: solid black
+
+.location-text
+  color: black
+  display: flex;
+  margin: auto
+  font-size: 45px
+  font-weight: 600
