--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -473,8 +473,8 @@ a:hover
 
 .location
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 40vh;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 300px;
 
 .t1
   margin-left: 10%
@@ -483,8 +483,8 @@ a:hover
   margin-right: 10%
 
 .location-img
-  width: 300px
-  height: 250px
+  width: 100%
+  height: 300px
   display: flex;
   margin: auto
   border: solid black
