added caption to location names

--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -491,7 +491,18 @@ a:hover
 
 .location-text
   color: black
-  display: flex;
-  margin: auto
-  font-size: 45px
+  display: grid;
+  grid-template-rows: 50% 50%;
+  
+  h1
+    font-size: 45px
+    font-weight: 600
+    display: grid
+    margin: auto
+    margin-top: 25%
+
+.caption
+  font-size: 15px
   font-weight: 600
+  display: grid
+  margin: auto
