--- a/src/pages/dev/main-page/main.styl
+++ b/src/pages/dev/main-page/main.styl
@@ -474,7 +474,7 @@ a:hover
 .location
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 300px;
+  grid-template-rows: 40vh;
 
 .t1
   margin-left: 10%
@@ -484,10 +484,11 @@ a:hover
 
 .location-img
   width: 100%
-  height: 300px
+  height: 40vh
   display: flex;
   margin: auto
   border: solid black
+  object-fit: cover
 
 .location-text
   color: black
@@ -499,10 +500,11 @@ a:hover
     font-weight: 600
     display: grid
     margin: auto
-    margin-top: 25%
+    margin-top: 30%
 
 .caption
   font-size: 15px
   font-weight: 600
   display: grid
   margin: auto
+  margin-top: 0
