--- a/src/pages/dev/test-site/about/main.styl
+++ b/src/pages/dev/test-site/about/main.styl
@@ -2,6 +2,10 @@
     color: black
     background-color: white
 
+#body
+  background-color: white
+  padding: 0 20%
+
 #apps
   padding: 75px 0    
 
@@ -161,8 +165,7 @@ a:hover
 
 
 #about  
-  padding: 75px 0
-  margin: 0 10%
+  padding: 50px 0
 
 .about-row
   margin: 4%
