--- a/src/pages/correlation/main.module.sass
+++ b/src/pages/correlation/main.module.sass
@@ -1,34 +1,66 @@
 $map-size: 40em
 $map-size-inset: 12em
 
-.column-selection-map
+.diagram-container
+  flex: 1
+  position: relative
+  min-height: 0
+  display: flex
+  flex-direction: row
+  gap: 1em
+  overflow: hidden
+  &.map-inset
+    .column-selection-map
+      position: absolute
+      top: 1em
+      right: 2em
+      height: $map-size-inset
+      width: $map-size-inset
+      z-index: 1000
+
+  &.map-expanded
+    .assistant
+      width: 40em
+      position: relative
+
+.column-selection-map, .unit-details-panel, .correlation-diagram
   box-shadow: 0 0 0.3em 0 rgba(0, 0, 0, 0.5)
   border-radius: 6px
+
+.column-selection-map
   overflow: hidden
-  height: $map-size-inset
-  width: $map-size-inset
-  position: absolute
-  top: 1em
-  right: 1em
   :global(.main-view)
     height: 100%
-  &.expanded
-    height: $map-size
-    width: $map-size
-    position: relative
-    top: 0
-    right: 0
-    margin-left: 1em
+  flex: 1
+  min-height: $map-size-inset
+  max-height: $map-size
+  width: $map-size
+  position: relative
+  top: 0
+  right: 0
+
+.unit-details-panel
+  overflow: scroll
+  background: var(--panel-secondary-background-color)
+  flex: 2
+  padding: 1em
+  max-width: 100%
+
+.main-area
+  position: relative
+  flex: 1
+  min-height: 0
+  min-width: 0
+
 
 .correlation-diagram
-  flex: 1
   overflow: scroll
   min-height: 0
   height: 100%
+  width: 100%
   padding: 1em
   background-color: var(--panel-secondary-background-color)
   box-shadow: 0 0 0.3em 0 var(--card-shadow-color)
-  border-radius: 6px
   --column-background-color: var(--background-color)
   --column-stroke-color: var(--text-color)
 
@@ -45,16 +77,27 @@ $map-size-inset: 12em
   display: flex
   flex-direction: column
 
-.diagram-container
-  flex: 1
-  position: relative
-  min-height: 0
-  display: flex
-  flex-direction: row
-
 
 .correlation-chart-inner
   display: flex
   flex-direction: row
 
+.overlay-safe-area
+  position: absolute
+  top: 1em
+  left: 1em
+  right: 1em
+  bottom: 1em
+  pointer-events: none
 
+.map-inset
+  .overlay-safe-area
+    margin-right: $map-size-inset + 1em
+
+  .column-selection-map
+    z-index: 1000
+
+.assistant
+  display: flex
+  flex-direction: column
+  gap: 1em
