--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -390,3 +390,41 @@ a:hover
   position:absolute
   z-index: 100
   padding: 0 20px
+
+
+.location
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 40vh;
+
+.t1
+  margin-left: 10%
+
+.t2
+  margin-right: 10%
+
+.location-img
+  width: 100%
+  height: 40vh
+  display: flex;
+  margin: auto
+  object-fit: cover
+
+.location-text
+  color: black
+  display: grid;
+  grid-template-rows: 50% 50%;
+  
+  h1
+    font-size: 45px
+    font-weight: 600
+    display: grid
+    margin: auto
+    margin-top: 33%
+
+.caption
+  font-size: 15px
+  font-weight: 600
+  display: grid
+  margin: auto
+  margin-top: 4%
