--- a/src/components/unit-details/main.module.sass
+++ b/src/components/unit-details/main.module.sass
@@ -24,6 +24,12 @@
   display: flex
   justify-content: space-between
   gap: 1em
+  border-bottom: 1px solid var(--panel-rule-color)
+  position: sticky
+  top: -1em
+  background-color: var(--panel-secondary-background-color)
+  margin: -1em -1em 0
+  padding: 0.5em 1em
   code
     font-size: 0.9em
     color: var(--secondary-color)
