started some cards

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -195,7 +195,7 @@ a:hover
   height: 100vh
 
 .donate-container
-  height: 80vh
+  height: 30vh
 
 .donate-title
   a 
@@ -211,7 +211,7 @@ a:hover
 .donate-left
   float: left
   width: 50%
-  height: 80vh
+  height: 30vh
   display: flex;
   justify-content: center;
   align-items: center;
@@ -219,7 +219,7 @@ a:hover
 .donate-right
   float: right
   width: 50%
-  height: 80vh
+  height: 30vh
   display: flex;
   justify-content: center;
   align-items: center;
@@ -239,9 +239,10 @@ a:hover
 .donate-img
   position:absolute
   z-index:5
-  height: 80vh
-  width: 100%
+  height: 30vh
+  width: 60%
   object-fit: cover
+  border-radius: 10px
 
 .app-header
   margin: 0
@@ -390,6 +391,7 @@ a:hover
   position:absolute
   z-index: 100
   padding: 0 20px
+  width: 60%
 
 
 .location
@@ -428,7 +430,7 @@ a:hover
   display: grid
   margin: auto
 
-.temp-class
+.basic-card
   display: grid
   grid-template-columns: 40% 60%
   grid-template-rows: 30vh
@@ -437,7 +439,7 @@ a:hover
   .link-title
     display: grid
     margin: auto
-    margin-left: 20%  
+    margin-left: 10%
     font-size: 35px
     
     a
@@ -452,5 +454,22 @@ a:hover
     font-size: 16px
 
 
+.card
+  padding: 0
+  margin: 2% 20%
+  width: 60%
+
+  .link-title 
+    font-size: 35px
+    
+    a
+      color: black
+
+  p
+    color: black
+    font-size: 16px
+
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
 
   
