--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -1,6 +1,6 @@
 html, body
   color: #E0E1E6
-  background-color: white
+  background-color: white 
   margin: 0
 
 #total
@@ -16,11 +16,12 @@ a:hover
   color: white
 
 .start
+  margin-top: 5%
   width: 100%
   display: flex;
   justify-content: center;
   align-items: center;  
-  height: 95vh
+  height: 80vh
   color: white
 
   li
@@ -37,16 +38,16 @@ a:hover
   z-index: 100
   padding: 0 20px
   display: grid
+  width: 50%
   margin: auto
 
 .cover-image
   position:absolute
   z-index:5
-  left:0px
-  top:0px
-  height: 100vh
-  width: 100%
+  height: 80vh
+  width: 60%
   object-fit: cover
+  border-radius: 10px
 
 .sea-image
   position:absolute
@@ -65,10 +66,13 @@ a:hover
   text-align: center
 
 .big-text
+  display: grid
+  margin: auto
   font-family: Helvetica, sans-serif
   font-weight: 900
   font-size: 20px
   text-shadow: black 1px 0 10px
+  color: white
 
 .top-stat, .top-stat-label
   display: grid
@@ -169,7 +173,8 @@ a:hover
   text-align: center
 
 .header 
-  margin: 0 20%
+  display: grid
+  margin: auto
   text-shadow: black 1px 0 10px
 
 #main-title
@@ -455,6 +460,7 @@ a:hover
 
 
 .card
+  background-color: white
   padding: 0
   margin: 2% 20%
   width: 60%
@@ -466,10 +472,52 @@ a:hover
       color: black
 
   p
-    color: black
     font-size: 16px
 
   border-radius: 10px
   box-shadow: black 1px 0 10px
 
+.location-card
+  display: grid
+  grid-template-columns: 50% 50%
+  grid-template-rows: 30vh
   
+  .link-title
+    display: grid
+    margin: auto
+    margin-left: 10%
+    font-size: 35px
+    
+    a
+      color: black
+
+  p
+    color: black
+    font-size: 16px
+
+  h1
+    color: black
+  
+  .card-image
+    height: 30vh
+    width: 100%
+
+  .top
+    border-radius: 10px 0 0 0
+  
+  .bottom
+    border-radius: 0 0 10px 0
+
+.location-text 
+  h1
+    diplay: grid
+    margin: auto
+    margin-bottom: 1%
+  p
+    display: grid
+    margin: auto
+    margin-top: 1%
+
+.long
+  a 
+    color: blue
