move nav bar over

--- a/src/pages/dev/test-site/main.styl
+++ b/src/pages/dev/test-site/main.styl
@@ -9,6 +9,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-left: 20%
     overflow: hidden;
     background-color: #015eab;
 
