--- a/src/pages/dev/test-site/people/main.styl
+++ b/src/pages/dev/test-site/people/main.styl
@@ -20,6 +20,24 @@ a:hover
   margin: 0 20% 
 
 
+.card
+  background-color: white
+  padding: 0
+  margin: 2% 20%
+  width: 60%
+
+  .link-title 
+    font-size: 35px
+    
+    a
+      color: black
+
+  p
+    font-size: 16px
+
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
+
 .people
     color: white
 
@@ -47,6 +65,7 @@ a:hover
     background-color: rgba(0, 0, 0, 0.2)
     bottom:0
     right: 0
+    border-radius: 0 0 10px 0
 
     a
         color: white
@@ -60,6 +79,7 @@ a:hover
     height: 30vh
     object-fit: cover
     width: 100%
+    border-radius: 10px
 
 n
     font-size: 25px
