--- a/src/pages/dev/test-site/donate/main.styl
+++ b/src/pages/dev/test-site/donate/main.styl
@@ -67,10 +67,31 @@ p
   position:absolute
   z-index:5
   height: 80vh
-  width: 100%
+  width: 60%
   object-fit: cover
+  border-radius: 10px
 
 .text
   position:absolute
   z-index: 100
   padding: 0 20px
+  width: 60%
+
+.card
+  background-color: white
+  padding: 0
+  margin: 2% 20%
+  margin-top: 100px
+  width: 60%
+
+  .link-title 
+    font-size: 35px
+    
+    a
+      color: black
+
+  p
+    font-size: 16px
+
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
