--- a/src/pages/dev/test-site/publications/main.styl
+++ b/src/pages/dev/test-site/publications/main.styl
@@ -19,12 +19,13 @@ p
     color: #E0E1E6
 
 .pub-line
-  width: 60%;
+  width: 55%;
   border-bottom: 1px solid #E0E1E6;
   position: absolute;
 
 #publications 
-  padding: 50px 20%
+  padding: 0 2.5%
+  padding-bottom: 35px
 
 #pub-title 
   text-align: left
@@ -32,6 +33,7 @@ p
   position: relative
   padding-bottom: 0
   margin-bottom: 0
+  padding-top: 25px
 
 .pub-list
   padding-top: 10px
@@ -50,3 +52,22 @@ p
 
 .blurb
   font-size: 15px
+
+.card
+  background-color: white
+  padding: 0
+  margin: 2% 20%
+  width: 60%
+  margin-top: 100px
+
+  .link-title 
+    font-size: 35px
+    
+    a
+      color: black
+
+  p
+    font-size: 16px
+
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
