changes spacing of start

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -16,7 +16,7 @@ a:hover
   color: white
 
 .start
-  margin-top: 5%
+  margin-top: 75px
   width: 100%
   display: flex;
   justify-content: center;
@@ -457,7 +457,6 @@ a:hover
     margin-right: 10%
     color: black
     font-size: 16px
-
 
 .card
   background-color: white
